# evgesha9400.github.io

./: .gitignore  README.md  lychee.toml  mkdocs.yml  pyproject.toml
.github/workflows/: deploy-pages.yml  external-links.yml  rebuild-library-pages.yml  verify.yml
catalog/: library-repositories.json
catalog/releases/: ig-trading-lib.json
docs/: catalogue-contract.md  index.md
docs/assets/stylesheets/: extra.css  prototypes.css
docs/includes/: ig-trading-card.md  ig-trading-details.md  ig-trading-lib-card.md  ig-trading-lib-details.md
docs/libraries/: ig-trading-lib.md  kucoin-futures-lib.md
docs/prototypes/: editorial-registry.md  index.md  library-constellation.md  systems-console.md
overrides/: 404.html
schemas/: library-manifest-1.0.schema.json
scripts/: __init__.py  check_links.py  library_manifest.py  library_release_publication.py  validate_library_release.py
tests/: test_docs_portal.py  test_library_manifest.py  test_library_release_publication.py
