[project]
name = "evgesha9400-docs-portal"
version = "0.1.0"
description = "Developer documentation portal for Evgeny Aleshin's public libraries."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "jsonschema>=4.24,<5",
    "PyYAML>=6.0,<7",
]

[dependency-groups]
dev = [
    "mkdocs-material>=9.6,<10",
    "playwright>=1.52,<2",
    "pytest>=8.3,<9",
    "ruff>=0.12,<1",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
addopts = "--strict-config --strict-markers -ra"
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
